--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+            
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
